--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^4.5.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.3.1",
+    "framer-motion": "^12.34.1",
     "lucide-react": "^0.574.0",
     "next": "^15.1.7",
     "react": "^19.0.0",
