--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "vercel-build": "next build",
+    "vercel-build": "node sync_notion.js && next build",
     "build:gh": "next build",
     "deploy": "npm run build:gh && gh-pages -d out"
   },
